<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/share"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_share"
        android:title=""
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_attach"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title=""
       app:showAsAction="always"/>

    app:showAsAction="always"/>
    <item
        android:id="@+id/action_color"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_compass"
        android:title=""
        app:showAsAction="always"/>






</menu>