...
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:textAlignment="viewStart"
                    app:srcCompat="@drawable/pin" />

                <TextView
                    android:id="@+id/itemTitle"
                    android:text="Titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textSize="20sp"

...
